--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
                         <div class="popup__content">
                             <h2 class="popup__title">Edit Profile</h2>
                             <button class="popup__close" type="button"></button>
-                            <form class="popup__form-window">
+                            <form 
+                            class="popup__form-window"
+                            name="popup__form">
                                 <input
                                 type="text"
-                                class="popup__input popup__input_type_name" >
+                                class="popup__input popup__input_type_name"
+                                name="name-input">
                                 <input
                                 type="text"
-                                class="popup__input popup__input_type_profession">
+                                class="popup__input popup__input_type_profession"
+                                name="profession-input">
                                 <button
                                 class="popup__submit"
                                 type="submit">Save
