--- a/index.html
+++ b/index.html
@@ -19,25 +19,12 @@
                 <div class="profile__info">
                     <div class="profile__info-inner">
                         <h1 class="profile__name">Jacques Cousteau</h1>
-                        <button class="profile__edit-button" type="button">
+                        <button class="profile__edit-button" type="button" aria-label="Edit button">
                         </button>
-                    </div>
-                    <div class="popup">
-                        <div class="popup__content">
-                            <h2 class="popup__title">Edit Profile</h2>
-                            <button class="popup__close" type="button"></button>
-                            <form class="popup__form-window" name="popup__form">
-                                <input type="text" class="popup__input popup__input_type_name" name="name-input">
-                                <input type="text" class="popup__input popup__input_type_profession"
-                                    name="profession-input">
-                                <button class="popup__submit" type="submit">Save
-                                </button>
-                            </form>
-                        </div>
                     </div>
                     <p class="profile__profession">Explorer</p>
                 </div>
-                <button class="profile__add-button"></button>
+                <button class="profile__add-button" type="button" aria-label="Add item button"></button>
             </section>
             <section class="elements">
                 <ul class="elements__pattern">
@@ -45,28 +32,28 @@
                         <img class="element__image" src="images/elements/yosemite-valley.jpg" alt="Yosemite Valley">
                         <div class="element__info">
                             <h2 class="element__title">Yosemite Valley</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                     <li class="element">
                         <img class="element__image" src="images/elements/lake-louise.jpg" alt="Lake Louise">
                         <div class="element__info">
                             <h2 class="element__title">Lake Louise</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                     <li class="element">
                         <img class="element__image" src="images/elements/bald-mountains.jpg" alt="Bald Mountains">
                         <div class="element__info">
                             <h2 class="element__title">Bald Mountains</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                     <li class="element">
                         <img class="element__image" src="images/elements/latemar.jpg" alt="Latemar">
                         <div class="element__info">
                             <h2 class="element__title">Latemar</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                     <li class="element">
@@ -74,14 +61,14 @@
                             alt="Vanoise National Park">
                         <div class="element__info">
                             <h2 class="element__title">Vanoise National Park</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                     <li class="element">
                         <img class="element__image" src="images/elements/lago-di-braies.jpg" alt="Lago di Braies">
                         <div class="element__info">
                             <h2 class="element__title">Lago di Braies</h2>
-                            <button class="element__like-button" type="button"></button>
+                            <button class="element__like-button" type="button" aria-label="Like button"></button>
                         </div>
                     </li>
                 </ul>
@@ -89,6 +76,21 @@
             <footer class="footer">
                 <p class="footer__copyright">©2021 Around The U.S.</p>
             </footer>
+
+            <div class="popup">
+                <div class="popup__content">
+                    <h2 class="popup__title">Edit Profile</h2>
+                    <button class="popup__close" type="button" aria-label="Close button"></button>
+                    <form class="popup__form-window" name="popup__form">
+                        <input type="text" class="popup__input popup__input_type_name" name="name-input"
+                            placeholder="Full name" required>
+                        <input type="text" class="popup__input popup__input_type_profession" name="profession-input"
+                            placeholder="profession" required>
+                        <button class="popup__submit" type="submit">Save
+                        </button>
+                    </form>
+                </div>
+            </div>
         </main>
     </div>
     <script src="./scripts/index.js"></script>
