--- a/index.html
+++ b/index.html
@@ -28,60 +28,17 @@
             </section>
             <section class="elements">
                 <ul class="elements__pattern">
-                    <li class="element">
-                        <img class="element__image" src="images/elements/yosemite-valley.jpg" alt="Yosemite Valley">
-                        <div class="element__info">
-                            <h2 class="element__title">Yosemite Valley</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
-                    <li class="element">
-                        <img class="element__image" src="images/elements/lake-louise.jpg" alt="Lake Louise">
-                        <div class="element__info">
-                            <h2 class="element__title">Lake Louise</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
-                    <li class="element">
-                        <img class="element__image" src="images/elements/bald-mountains.jpg" alt="Bald Mountains">
-                        <div class="element__info">
-                            <h2 class="element__title">Bald Mountains</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
-                    <li class="element">
-                        <img class="element__image" src="images/elements/latemar.jpg" alt="Latemar">
-                        <div class="element__info">
-                            <h2 class="element__title">Latemar</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
-                    <li class="element">
-                        <img class="element__image" src="images/elements/vanoise-national.jpg"
-                            alt="Vanoise National Park">
-                        <div class="element__info">
-                            <h2 class="element__title">Vanoise National Park</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
-                    <li class="element">
-                        <img class="element__image" src="images/elements/lago-di-braies.jpg" alt="Lago di Braies">
-                        <div class="element__info">
-                            <h2 class="element__title">Lago di Braies</h2>
-                            <button class="element__like-button" type="button" aria-label="Like button"></button>
-                        </div>
-                    </li>
                 </ul>
             </section>
             <footer class="footer">
                 <p class="footer__copyright">©2021 Around The U.S.</p>
             </footer>
 
-            <div class="popup">
+            <div class="popup" id="popup_type_edit-profile">
                 <div class="popup__content">
                     <h2 class="popup__title">Edit Profile</h2>
                     <button class="popup__close" type="button" aria-label="Close button"></button>
-                    <form class="popup__form-window" name="popup__form">
+                    <form class="popup__form-window" name="popup__form" id="edit_form">
                         <input type="text" class="popup__input popup__input_type_name" name="name-input"
                             placeholder="Full name" required>
                         <input type="text" class="popup__input popup__input_type_profession" name="profession-input"
@@ -91,8 +48,33 @@
                     </form>
                 </div>
             </div>
+            <div class="popup" id="popup_type_add-card">
+                <div class="popup__content">
+                    <h2 class="popup__title">New Place</h2>
+                    <button class="popup__close" type="button" aria-label="Close button"></button>
+                    <form class="popup__form-window" name="popup__form" id="add_form">
+                        <input type="text" class="popup__input popup__input_type_card-name" name="card-name"
+                            placeholder="Card name" required>
+                        <input type="text" class="popup__input popup__input_type_card-link" name="card-link"
+                            placeholder="Card URL" required>
+                        <button class="popup__submit" type="submit">Save
+                        </button>
+                    </form>
+                </div>
+            </div>
         </main>
     </div>
+    <template id="card-template">
+        <li class="element">
+            <button class="element__delete_btn" type="button" aria-label="delete button"></button>
+            <img class="element__image">
+            <div class="element__info">
+                <h2 class="element__title"></h2>
+                <button class="element__like-button element__like-button_not-active" type="button" aria-label="Like button"></button>
+            </div>
+        </li>
+    </template>
+
     <script src="./scripts/index.js"></script>
 </body>
 
