--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="popup__image-wrapper">
             <button class="popup__close" id="image_close_btn"></button>
             <figure class="popup__figure-wrapper">
-                <img class="popup__image" />
+                <img class="popup__image" alt="pictures reviews"/>
                 <figcaption class="popup__image-info"></figcaption>
             </figure>
         </div>
