--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="popup__image-wrapper">
             <button class="popup__close" id="image_close_btn"></button>
             <figure class="popup__figure-wrapper">
-                <img class="popup__image" alt="pictures reviews"/>
+                <img class="popup__image" src="#" alt="pictures reviews"/>
                 <figcaption class="popup__image-info"></figcaption>
             </figure>
         </div>
@@ -76,7 +76,7 @@
     <template id="card-template">
         <li class="element">
             <button class="element__delete_btn" type="button" aria-label="delete button"></button>
-            <img class="element__image">
+            <img class="element__image" src="#">
             <div class="element__info">
                 <h2 class="element__title"></h2>
                 <button class="element__like-button element__like-button_not-active" type="button"
