--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
                     <h2 class="popup__title">Edit Profile</h2>
                     <button class="popup__close" type="button" aria-label="Close button"></button>
                     <form class="popup__form-window" name="popup__form" id="edit_form">
-                        <input type="text" class="popup__input popup__input_type_name" name="name-input"
-                            placeholder="Full name" required>
-                        <input type="text" class="popup__input popup__input_type_profession" name="profession-input"
-                            placeholder="profession" required>
+                        <input id="input_type_name" type="text" class="popup__input popup__input_type_name"
+                            name="name-input" placeholder="Full name" minlength="2" maxlength="40" required>
+                        <span id="input_type_name-error" class="popup_error"></span>
+                        <input id="input_type_profession" type="text" class="popup__input popup__input_type_profession"
+                            name="profession-input" placeholder="profession" minlength="2" maxlength="200" required>
+                        <span id="input_type_profession-error" class="popup_error"></span>
                         <button class="popup__submit" type="submit">Save
                         </button>
                     </form>
@@ -53,10 +55,12 @@
                     <h2 class="popup__title">New Place</h2>
                     <button class="popup__close" type="button" aria-label="Close button"></button>
                     <form class="popup__form-window" name="popup__form" id="add_form">
-                        <input type="text" class="popup__input popup__input_type_card-name" name="card-name"
-                            placeholder="Card name" required>
-                        <input type="url" class="popup__input popup__input_type_card-link" name="card-link"
-                            placeholder="Card URL" required>
+                        <input id="input_type_card-name" type="text" class="popup__input popup__input_type_card-name"
+                            name="card-name" placeholder="Card name" minlength="1" maxlength="30" required>
+                        <span id="input_type_card-name-error" class="popup_error"></span>
+                        <input id="input_type_card-link" type="url" class="popup__input popup__input_type_card-link"
+                            name="card-link" placeholder="Card URL" required>
+                        <span id="input_type_card-link-error" class="popup_error"></span>
                         <button class="popup__submit" type="submit">Save
                         </button>
                     </form>
@@ -68,7 +72,7 @@
         <div class="popup__image-wrapper">
             <button class="popup__close" id="image_close_btn"></button>
             <figure class="popup__figure-wrapper">
-                <img class="popup__image" src="#" alt="pictures reviews"/>
+                <img class="popup__image" src="#" alt="pictures reviews" />
                 <figcaption class="popup__image-info"></figcaption>
             </figure>
         </div>
@@ -79,12 +83,11 @@
             <img class="element__image" src="#" alt="">
             <div class="element__info">
                 <h2 class="element__title"></h2>
-                <button class="element__like-button" type="button"
-                    aria-label="Like button"></button>
+                <button class="element__like-button" type="button" aria-label="Like button"></button>
             </div>
         </li>
     </template>
-
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
