--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <form class="popup__form-window" name="popup__form" id="edit_form">
                         <input id="input_type_name" type="text" class="popup__input popup__input_type_name"
                             name="name-input" placeholder="Full name" minlength="2" maxlength="40" required>
-                        <span id="input_type_name-error" class="popup_error"></span>
+                        <span id="input_type_name-error" class="popup__error"></span>
                         <input id="input_type_profession" type="text" class="popup__input popup__input_type_profession"
                             name="profession-input" placeholder="profession" minlength="2" maxlength="200" required>
-                        <span id="input_type_profession-error" class="popup_error"></span>
+                        <span id="input_type_profession-error" class="popup__error"></span>
                         <button class="popup__submit" type="submit">Save
                         </button>
                     </form>
@@ -57,10 +57,10 @@
                     <form class="popup__form-window" name="popup__form" id="add_form">
                         <input id="input_type_card-name" type="text" class="popup__input popup__input_type_card-name"
                             name="card-name" placeholder="Card name" minlength="1" maxlength="30" required>
-                        <span id="input_type_card-name-error" class="popup_error"></span>
+                        <span id="input_type_card-name-error" class="popup__error"></span>
                         <input id="input_type_card-link" type="url" class="popup__input popup__input_type_card-link"
                             name="card-link" placeholder="Card URL" required>
-                        <span id="input_type_card-link-error" class="popup_error"></span>
+                        <span id="input_type_card-link-error" class="popup__error"></span>
                         <button class="popup__submit" type="submit">Save
                         </button>
                     </form>
