--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             </div>
         </li>
     </template>
+    <script type="module" src="./scripts/card.js"></script>
     <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
