--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             </div>
         </main>
     </div>
-    <div class="popup" id="popup_image-container">
+    <!--div had ID - id="popup_image-container"-->
+    <div class="popup popup_image-container" >
         <div class="popup__image-wrapper">
             <button class="popup__close" id="image_close_btn"></button>
             <figure class="popup__figure-wrapper">
@@ -87,8 +88,6 @@
             </div>
         </li>
     </template>
-    <script type="module" src="./scripts/card.js"></script>
-    <script src="./scripts/validate.js"></script>
     <script type="module" src="./scripts/index.js"></script>
 </body>
 
