--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,10 @@
                     <button class="popup__close" type="button" aria-label="Close button"></button>
                     <form class="popup__form-window" name="popup__form" id="add_form">
                         <input id="input_type_card-name" type="text" class="popup__input popup__input_type_card-name"
-                            name="card-name" placeholder="Card name" minlength="1" maxlength="30" required>
+                            name="name" placeholder="Card name" minlength="1" maxlength="30" required>
                         <span id="input_type_card-name-error" class="popup__error"></span>
                         <input id="input_type_card-link" type="url" class="popup__input popup__input_type_card-link"
-                            name="card-link" placeholder="Card URL" required>
+                            name="link" placeholder="Card URL" required>
                         <span id="input_type_card-link-error" class="popup__error"></span>
                         <button class="popup__submit" type="submit">Save
                         </button>
